--- a/maps/package.json
+++ b/maps/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "@types/googlemaps": "^3.37.6"
   },
   "dependencies": {
     "@types/faker": "^4.1.5",
